data/forge_javadoc/1.11.2/raw/net/minecraft/item/ItemMonsterPlacer.md
---
title: "ItemMonsterPlacer"
description: "public class ItemMonsterPlacer extends Item"
package: "net/minecraft/item"
version: "1.11.2"
forgeBuild: "13.20.0.2228"
fetchedWith: "c4-2026-09-22"
source: "https://skmedix.github.io/ForgeJavaDocs/javadoc/forge/1.11.2-13.20.0.2228/net/minecraft/item/ItemMonsterPlacer.html"
sourceType: javadoc
---

# ItemMonsterPlacer

**Inheritance:** java.lang.Object → net.minecraftforge.fml.common.registry.IForgeRegistryEntry.Impl<Item> → net.minecraft.item.Item → net.minecraft.item.ItemMonsterPlacer

## Class signature

```java
public class ItemMonsterPlacer extends Item
```

## Methods

- `static void applyEntityIdToItemStack(ItemStack stack, ResourceLocation entityId)`
- `static void applyItemEntityDataToEntity(World entityWorld, EntityPlayer player, ItemStack stack, Entity targetEntity)`
- `java.lang.String getItemStackDisplayName(ItemStack stack)`
- `static ResourceLocation getNamedIdFrom(ItemStack p_190908_0_)`
- `void getSubItems(Item itemIn, CreativeTabs tab, NonNullList<ItemStack> subItems)`
- `protected double getYOffset(World p_190909_1_, BlockPos p_190909_2_)`
- `ActionResult<ItemStack> onItemRightClick(World worldIn, EntityPlayer playerIn, EnumHand handIn)`
- `EnumActionResult onItemUse(EntityPlayer player, World worldIn, BlockPos pos, EnumHand hand, EnumFacing facing, float hitX, float hitY, float hitZ)`
- `static Entity spawnCreature(World worldIn, ResourceLocation entityID, double x, double y, double z)`

## Fields

- `ItemMonsterPlacer`
